Add g push origin to end of publish

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "eslint lib",
     "build": "babel src --out-dir lib",
-    "publish": "npm run build && npm publish"
+    "publish": "npm run build && npm publish && g push origin"
   },
   "repository": {
     "type": "git",
