--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "scripts": {
     "test": "eslint lib",
+    "prebuild": "rm -r lib",
     "build": "babel src --out-dir lib",
     "prepublish": "npm run build",
     "postpublish": "git push origin"
