--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "chalk": "^1.1.3",
     "detect-port": "^1.0.5",
     "lodash": "^4.16.4",
-    "react-dev-utils": "^0.3.0",
+    "react-dev-utils": "0.4.x",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.2"
   }
