--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "scripts": {
     "lint": "eslint src",
-    "prettify": "prettier --trailing-comma es5 --single-quote --no-semi --print-width 100 --write src/**/*.js",
+    "prettify": "prettier --trailing-comma all --single-quote --no-semi --print-width 100 --write src/**/*.js",
     "prebuild": "rm -r lib || true",
     "build": "babel src --out-dir lib",
     "prepublishOnly": "npm run build",
@@ -46,12 +46,12 @@
   "lint-staged": {
     "src/**/*.js": [
       "eslint --fix",
-      "prettier --trailing-comma es5 --single-quote --no-semi --print-width 100 --write",
+      "prettier --trailing-comma all --single-quote --no-semi --print-width 100 --write",
       "git add"
     ]
   },
   "devDependencies": {
-    "@unfold/eslint-config": "^1.2.0",
+    "@unfold/eslint-config": "^2.0.1",
     "chokidar": "^1.6.1",
     "eslint": "^3.8.1",
     "husky": "^0.14.3",
@@ -62,10 +62,10 @@
     "@unfold/babel-preset": "^1.0.1",
     "babel-cli": "^6.16.0",
     "chalk": "^1.1.3",
-    "detect-port": "^1.0.5",
     "lodash": "^4.16.4",
-    "react-dev-utils": "0.4.x",
-    "webpack": "2.x.x",
+    "react-dev-utils": "^3.0.2",
+    "react-error-overlay": "^1.0.9",
+    "webpack": "^2.7.0",
     "webpack-dev-server": "2.x.x",
     "yargs": "^6.6.0"
   }
