--- a/package.json
+++ b/package.json
@@ -66,10 +66,10 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "lodash": "^4.16.4",
-    "react-dev-utils": "^3.0.2",
-    "react-error-overlay": "^1.0.9",
-    "webpack": "^2.7.0",
-    "webpack-dev-server": "2.x.x",
+    "react-dev-utils": "^3.1.1",
+    "react-error-overlay": "^1.0.10",
+    "webpack": "^3.5.3",
+    "webpack-dev-server": "2.6.x",
     "yargs": "^6.6.0"
   }
 }
